--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "webp-converter": "^2.2.3",
     "webpack": "^5.89.0",
     "webpack-stream": "^7.0.0"
+  },
+  "dependencies": {
+    "@fancyapps/ui": "^5.0.36"
   }
 }
