--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-zip": "^6.0.0",
     "sass": "^1.69.5",
     "swiper": "^11.0.5",
+    "vanilla-lazyload": "^19.1.3",
     "vinyl-ftp": "^0.6.1",
     "webp-converter": "^2.2.3",
     "webpack": "^5.89.0",
